--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "@bot-whatsapp/portal": "^0.0.18-alpha.0",
         "@bot-whatsapp/provider": "^0.0.66-alpha.0",
         "mime-types": "2.1.35",
-        "wa-sticker-formatter": "4.3.2"
+        "wa-sticker-formatter": "4.3.2",
+        "qrcode-terminal": "^0.12.0"
     },
     "author": "",
     "license": "ISC"
 }
+
